    handling
	
	PIG-108: Fixed PigCombine to not do initialization on every call to 
	reduce, but instead only do it once in the call to configure.  (joa23 via
	gates).

    PIG-172: dealing with NULL error messages in exceptions (olgan)

    PIG-170: sort bags so that largest ones are released first

	PIG-122: Added build and src-gen to the list of ignore files in
	the top level directory (joa23 via gates).

    PIG-94: M3 code update for streaming (arunc via olgan)

	PIG-179: Changed PigRecordReader to be a static singleton rather than
	thread local.  (gates).
    
    PIG-55: added custom splitter (groves via olgan)

    PIG-174,180: bug fixes in streaming (arunc via olgan)

    PIG-181: streaming bug fixing (arunc via olgan)

    PIG-182: streaming bug fix (arunc via olgan)

    PIG-184: streaming bug fixes

	PIG-153: Incorrect result caused by dump in between statements (pi_song
	via gates).

    PIG-58: parameter substitution integration

	PIG-111: Reworked configuration to be setable via properties.
	(Contributions from joa23, pi_song, and oae via gates).

	PIG-178: Use of schema on secondary output of SPLIT throws
	IndexOutOfBoundsException (kali via gates).

	PIG-59: Add a new ILLUSTRATE command (shubhamc via gates).

	PIG-203: Fix bug in parameter substitution code where any pig script over
	1k caused pig to freeze. (kali via gates)

	PIG-204: Repair broken input splits (acmurthy via gates).

	PIG-188: Fix mismatches between pig slicer changes and new streaming
	feature (acmurthy via gates).

	PIG-149, PIG-150:  Fix doc target so that ant can generate docs (xuzh via
	gates).

	PIG-183:  Catch when a UDF has been compiled with the wrong version of
	java and give a RuntimeException (pi_song via gates).

	PIG-114: store one alias/logicalPlan twice leads to instantiation of
	StoreFunc as LoadFunc (pi_song via gates).

	PIG-213: Remove non-static references to logger from data bags and tuples,
	as it causes significant overhead (vgeschel via gates).